fix: update release.yaml

--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -27,6 +27,9 @@ spec:
         - name: jx-variables
           resources: {}
         - name: build-python-unittest
+          script: |
+            #!/usr/bin/env sh
+            pip install -r requirements.txt && python manage.py test
           resources: {}
         - name: check-registry
           resources: {}
